--- a/services/templates/services/services_detail.html
+++ b/services/templates/services/services_detail.html
@@ -69,7 +69,8 @@
         <td><a href=" {{ obj.id }}" name="id">{{ obj.Επ_Service}} </a></td>
 
         <td><a role="button" class="btn btn btn-secondary btn-sm" href=" /machines/{{ obj.Copier_ID_id }}" name="id">
-            {{ obj.Copier_ID }} </a>
+                {{ obj.Copier_ID}}
+             </a>
         </td>
 
         <td><a href=" {{ obj.id }}" name="id">{{ obj.ΔΤΕ}} </a></td>
