--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -60,6 +60,8 @@
             <a class="dropdown-item" href="{% url 'machines:add_machine' %}"><h6>Προσθήκη μηχανήματος</h6></a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="{% url 'machines:inactive_machines' %}">Απενεργοποιημένα μηχανήματα</a>
+            <a class="dropdown-item" href="{% url 'Copiers_Log:transfers' %}">Ιστορικό μεταφορών</a>
+
         </div>
     </li>
     <li class="nav-item">
