--- a/machines/templates/machines/transfer_machine.html
+++ b/machines/templates/machines/transfer_machine.html
@@ -4,7 +4,7 @@
 
 
 <h2 class="btn btn-secondary btn-lg">
-     Επεξεργασία μηχανήματος
+     Μεταφορά μηχανήματος
 
 </h2>
 
@@ -32,7 +32,7 @@
 
 
                         <a>
-                            <a class="btn btn btn-info" role="button"  href="/customers/{{ field.Πελάτης.id }}">
+                            <a class="btn btn btn-info" role="button" >
                                 {{  form.Πελάτης|as_crispy_field }}
                         </a>
 
@@ -54,7 +54,7 @@
             </td>
 
 
-            <td >
+            <td>
                 {{ form.Σημειώσεις|as_crispy_field }}
                 <button type="button" class="btn btn-primary" onclick="goBack()">Πίσω</button>
                 <button type="submit" value="Αποθήκευση" class="btn btn-success">Αποθήκευση</button>
@@ -65,22 +65,17 @@
                 {% endif %}
                 <br><br>
                 <div class="form-row">
-                    <div class="form-group col-md-4 mb-0">
+                    <div class="form-group col-md-5 mb-0">
                         <a class="btn  btn-warning" role="button"  href=" {% url 'Calendar:add_calendar' machine_id  %} ">
                             Προσθήκη Εργασίας
                         </a>
                     </div>
 
-                    <div class="form-group col-md-4 mb-0">
+                    <div class="form-group col-md-5 mb-0">
                         <a class="btn  btn-dark" role="button" href=" {% url 'services:add_service_from_machines' machine_id %} ">
                             Προσθήκη Συντηρήσης
                         </a>
                     </div>
-                    <div class="form-group col-md-4 mb-0">
-
-                    <a class="btn  btn-outline-danger" role="button" href="{% url 'machines:transfer_machine' machine_id %}">
-                        Μεταφορά μηχανήματος</a>
-                            </div>
                 </div>
 
             </td>
