--- a/machines/templates/machines/add_machine_to_customer.html
+++ b/machines/templates/machines/add_machine_to_customer.html
@@ -23,7 +23,7 @@
 
 
 {% load crispy_forms_tags %}
-<form action="../add_machine" method="POST">
+<form action="" method="POST">
     {% csrf_token %}
 
     <table class="table table-secondary table-bordered">
