--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -29,6 +29,8 @@
         <div class="dropdown-menu">
             <a class="dropdown-item" href="{% url 'Calendar:list_calendar' %}"><h6>Τρέχων εργασίες</h6></a>
             <a class="dropdown-item" href="{% url 'Calendar:finished_jobs' %}"><h6>Ολοκληρωμένες εργασίες</h6></a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="{% url 'Calendar:calendar' %}"><h6>Ημερολόγιο</h6></a>
 
         </div>
     </li>
