Ready with Files 24-04-2020

--- a/Calendar/templates/Calendar/create.html
+++ b/Calendar/templates/Calendar/create.html
@@ -6,17 +6,24 @@
     </i>
 </h1>
 
-{% if messages %}
-<ul class="messages">
-    {% for message in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-    {% endfor %}
-</ul>
-{% endif %}
+ {% if form.errors %}
+    <div class="alert alert-danger alert-dismissible col-12 mx-1" role="alert">
+        <div id="form_errors">
+            {% for key, value in form.errors.items %}
+                <span class="fieldWrapper">
+                    {{ key }}:{{ value }}
+                </span>
+            {% endfor %}
+        </div>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {% endif %}
 
 
 {% load crispy_forms_tags %}
-<form action="{% url 'Calendar:add_calendar' form.Copier_ID.value  %}" method="POST">
+<form action="{% url 'Calendar:add_calendar' form.Copier_ID.value  %}" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
 <table class="table table-secondary table-bordered">
 
@@ -74,6 +81,7 @@
             <td>
                 {{ form.Σημειώσεις|as_crispy_field }}
                 <button type="button" class="btn btn-primary" onclick="goBack()">Πίσω</button>
+                <input type="file" name="file" multiple />
                 <button type="submit" class="btn btn-success">Αποθήκευση</button>
 
             </td>
