--- a/Calendar/templates/Calendar/search_calendar_result.html
+++ b/Calendar/templates/Calendar/search_calendar_result.html
@@ -53,7 +53,7 @@
     <tr>
         <td><a href=" {{ obj.id }}" name="id">{{ obj.id }} </a> </td>
         <td><a href=" {{ obj.id }}" name="id">{{ obj.Ημερομηνία }} </a> </td>
-        <td><a href=" {{ obj.id }}" name="id">{{ obj.Σκοπός_Επίσκεψης}} </a> </td>
+        <td><a href=" {{ obj.id }}" name="id">{{ obj.Σκοπός}} </a> </td>
         <td><a href=" {{ obj.id }}" name="id">{{ obj.Ενέργειες}} </a></td>
         <td><a href=" {{ obj.id }}" name="id">{{ obj.Τεχνικός}} </a></td>
         <td><a href=" {{ obj.id }}" name="id">{{ obj.Μετρητής}} </a></td>
