--- a/machines/templates/machines/add_machine_to_customer.html
+++ b/machines/templates/machines/add_machine_to_customer.html
@@ -11,15 +11,20 @@
 </h2>
 
 
-{% if messages %}
-<ul class="messages">
-    {% for message in messages %}
-    <li>{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}
-    </li>
-
-    {% endfor %}
-</ul>
-{% endif %}
+ {% if form.errors %}
+    <div class="alert alert-danger alert-dismissible col-12 mx-1" role="alert">
+        <div id="form_errors">
+            {% for key, value in form.errors.items %}
+                <span class="fieldWrapper">
+                    {{ key }}:{{ value }}
+                </span>
+            {% endfor %}
+        </div>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {% endif %}
 
 
 {% load crispy_forms_tags %}
