--- a/services/templates/services/detail.html
+++ b/services/templates/services/detail.html
@@ -12,17 +12,24 @@
     </i>
 </h3>
 
-{% if messages %}
-<ul class="messages">
-    {% for message in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-    {% endfor %}
-</ul>
-{% endif %}
+ {% if form.errors %}
+    <div class="alert alert-danger alert-dismissible col-12 mx-1" role="alert">
+        <div id="form_errors">
+            {% for key, value in form.errors.items %}
+                <span class="fieldWrapper">
+                    {{ key }}:{{ value }}
+                </span>
+            {% endfor %}
+        </div>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {% endif %}
 
 
 {% load crispy_forms_tags %}
-<form  method="POST">
+<form  method="POST" enctype="multipart/form-data">
     {% csrf_token %}
 
     <table class="table table-secondary table-bordered">
@@ -79,6 +86,7 @@
             <td rowspan="5" align="center">
                 {{ form.Σημειώσεις|as_crispy_field }}
                 <button type="button" class="btn btn-primary" onclick="goBack()">Πίσω</button>
+                   <input type="file" name="file" multiple />
                 <button name="add_service" type="submit" value="Αποθήκευση" class="btn btn-success">Αποθήκευση</button>
                 <a role="button" class="btn btn-danger" href="{% url 'services:delete_service' services.id %}">Διαγραφή</a>
             </td>
@@ -91,9 +99,22 @@
                     <br>
                     {% endfor %}
                 </ol>
+
+                 <h3>Αρχεία</h3>
+                    <ol>
+                        {% for i in files %}
+                            <li>
+                                <a href="Service_images/{{form.}}/{{ i }}">{{ i }}</a>
+
+                            </li>
+                        {% endfor %}
+
+
+                    </ol>
             </td>
 
         </tr>
+
     </table>
 
 
