--- a/spareparts/templates/spareparts/detail.html
+++ b/spareparts/templates/spareparts/detail.html
@@ -9,6 +9,20 @@
 
 </h2>
 
+ {% if form.errors %}
+    <div class="alert alert-danger alert-dismissible col-12 mx-1" role="alert">
+        <div id="form_errors">
+            {% for key, value in form.errors.items %}
+                <span class="fieldWrapper">
+                    {{ key }}:{{ value }}
+                </span>
+            {% endfor %}
+        </div>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {% endif %}
 
 
 {% load crispy_forms_tags %}
@@ -32,7 +46,7 @@
                     </div>
 
                     <div class="form-group col-lg-3 mb-0">
-                        <a class="btn  btn-secondary" role="button"  href=" {% url 'machines:edit_machine' machine_id %} ">
+                        <a class="btn  btn-secondary" role="button" {% if machine_id == 2 %} href="" {% else %} href=" {% url 'machines:edit_machine' machine_id %}" {% endif %}>
                             <H5>Μηχάνημα</H5>
                             {{  spareparts.ΜΗΧΑΝΗΜΑ }}
                         </a>
