--- a/Calendar/templates/Calendar/calendar_detail.html
+++ b/Calendar/templates/Calendar/calendar_detail.html
@@ -35,7 +35,7 @@
 <p></p>
 
 
-<table id="calendar" class="table table-hover table-bordered "  bgcolor="#EFF0F1">
+<table id="active_calendar" class="table table-hover table-bordered "  bgcolor="#EFF0F1">
 
     <thead>
 
@@ -52,14 +52,15 @@
 
     </tr>
     </thead>
+    {% for obj in object_list %}
     <tbody>
 
-    {% for obj in object_list %}
+
     <tr  align="center">
         <td ><a href=" {{ obj.id }}" name="id">{{ obj.id }}</a> </td>
         <td><a href="{{ obj.id }} " name="Ημερομηνία">{{ obj.Ημερομηνία}} </a></td>
         <td><a href=" {{ obj.id }}" name="Σκοπός">{{ obj.Σκοπός}} </a></td>
-        <td><a class="btn btn-info" role="button" href=" {% url 'customers:edit_customer' obj.Customer_ID %}" name="Επωνυμία_Επιχείρησης">
+        <td><a class="btn btn-primary" role="button" href=" {% url 'customers:edit_customer' obj.Customer_ID %}" name="Επωνυμία_Επιχείρησης">
              {{ obj.Πελάτης }}</a> </td>
         <td><a role="button"  class="btn btn-secondary" href=" {% url 'machines:edit_machine' obj.Copier_ID_id %}" name="Μηχάνημα">
             {{ obj.Μηχάνημα }} </a> </td>
@@ -72,6 +73,8 @@
     </tr>
     </tbody>
     {% endfor %}
+    <tfoot>
+   </tfoot>
 </table>
 
 
@@ -138,7 +141,7 @@
 
 
 <p>
-    <button type="button" class="btn btn-primary" onclick="goBack()">Πίσω</button>
+    <button type="button" class="btn btn-info" onclick="goBack()">Πίσω</button>
 
 </p>
 <script>
