--- a/Calendar/templates/Calendar/create.html
+++ b/Calendar/templates/Calendar/create.html
@@ -36,7 +36,7 @@
             {{ form.Ημερομηνία|as_crispy_field }}
             </div>
             <div class="form-group col-md-2 mb-0">
-                <a class="btn btn btn-info" role="button" href="/customers/{{ form.Customer_ID.value }}">
+                <a class="btn btn btn-primary" role="button" href="/customers/{{ form.Customer_ID.value }}">
                     {{ form.Πελάτης|as_crispy_field }}
                 </a>
 
@@ -80,7 +80,7 @@
         </td>
             <td>
                 {{ form.Σημειώσεις|as_crispy_field }}
-                <button type="button" class="btn btn-primary" onclick="goBack()">Πίσω</button>
+                <button type="button" class="btn btn-info" onclick="goBack()">Πίσω</button>
                 <input type="file" name="file" multiple />
                 <button type="submit" class="btn btn-success">Αποθήκευση</button>
 
