--- a/Calendar/templates/Calendar/detail.html
+++ b/Calendar/templates/Calendar/detail.html
@@ -38,7 +38,7 @@
                     </div>
 
                     <div class="form-group col-md-4 mb-0">
-                        <a class="btn btn btn-info" role="button" href="/customers/{{ calendar_form.Copier_ID.Πελάτης.id }}">
+                        <a class="btn btn btn-primary" role="button" href="/customers/{{ calendar_form.Copier_ID.Πελάτης.id }}">
                             {{  form.Πελάτης|as_crispy_field }}
                         </a>
                     </div>
@@ -91,7 +91,7 @@
             </td>
             <td>
                 {{ form.Σημειώσεις|as_crispy_field }}
-                <button type="button" class="btn btn-primary" onclick="goBack()">Πίσω</button>
+                <button type="button" class="btn btn-info" onclick="goBack()">Πίσω</button>
                 <input type="file" name="file" multiple />
                 <button type="submit" class="btn btn-success">Αποθήκευση</button>
 
@@ -122,7 +122,7 @@
                     <ol>
                         {% for i in files %}
                             <li>
-                                <a href="Service_images/{{ form.Service_ID.value }}/{{ i }}">{{ i }}</a>
+                                <a href="{{ MEDIA_URL }}{{ form.Service_ID.value }}/{{ i }}">{{ i }}</a>
 
                             </li>
                         {% endfor %}
