--- a/Copiers_Log/templates/Copiers_Log/search_copiers_log.html
+++ b/Copiers_Log/templates/Copiers_Log/search_copiers_log.html
@@ -39,7 +39,7 @@
             <td><a role="button"  class="btn btn-secondary" href="../machines/{{  obj.ID_μηχανήματος.id }} " name="id">{{ obj.Μηχάνημα }}</a> </td>
             <td><a  name="id">{{ obj.Ημερομηνία}} </a> </td>
             <td><a class="btn btn-info" role="button" href="" href=" " name="id">{{ obj.Προηγούμενος_Πελάτης }}</a> </td>
-            <td><a class="btn btn-info" role="button" href="" href=" " name="id">{{ obj.Νέος_Πελάτης }}</a> </td>
+            <td><a class="btn btn-primary" role="button" href="" href=" " name="id">{{ obj.Νέος_Πελάτης }}</a> </td>
             <td><a  name="id">{{ obj.Σημειώσεις}} </a></td>
 
         </tr>
@@ -113,7 +113,7 @@
 
 
     <p>
-        <button type="button" class="btn btn-primary" onclick="goBack()">Πίσω</button>
+        <button type="button" class="btn btn-info" onclick="goBack()">Πίσω</button>
 
     </p>
     <script>
