--- a/customers/templates/customers/create.html
+++ b/customers/templates/customers/create.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<h2 class="btn btn-info btn-lg">
+<h2 class="btn btn-primary btn-lg">
     <i class="fas fa-user-plus">  Προσθήκη πελάτης
     </i>
 </h2>
@@ -77,7 +77,7 @@
             </td>
             <td>
                 {{ form.Σημειώσεις|as_crispy_field }}
-                <button type="button" class="btn btn-primary" onclick="goBack()">Πίσω</button>
+                <button type="button" class="btn btn-info" onclick="goBack()">Πίσω</button>
                 <button name="add_customer" type="submit" value="Αποθήκευση" class="btn btn-success">Αποθήκευση</button>
 
             </td>
