--- a/customers/templates/customers/detail.html
+++ b/customers/templates/customers/detail.html
@@ -5,7 +5,7 @@
 
 
 
-<h2 class="btn btn-info btn-lg">
+<h2 class="btn btn-primary btn-lg">
     <i class="fas fa-user-edit"> Επεξεργασία πελάτη
     </i>
 </h2>
@@ -78,7 +78,7 @@
             </td>
             <td>
                 {{ form.Σημειώσεις|as_crispy_field }}
-                <button type="button" class="btn btn-primary" onclick="goBack()">Πίσω</button>
+                <button type="button" class="btn btn-info" onclick="goBack()">Πίσω</button>
                 <button  type="submit" class="btn btn-success">Αποθήκευση</button>
                 <a class="btn  btn-secondary" role="button"  href=" {% url 'machines:add_machine_from_customers'  customer %} ">
                      Προσθήκη Μηχανήματος
