--- a/customers/templates/customers/inactive_customers_detail.html
+++ b/customers/templates/customers/inactive_customers_detail.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 
-<h2 class="btn btn-info btn-lg"><i class="fas fa-user-times"></i>
+<h2 class="btn btn-primary btn-lg"><i class="fas fa-user-times"></i>
     Σύνολο:{{ page_obj.paginator.count }} Απενεργοποιημένοι πελάτες </h2>
 
 
@@ -145,7 +145,7 @@
 {% endif %}
 
 <p>
-    <button type="button" class="btn btn-primary" onclick="goBack()">Πίσω</button>
+    <button type="button" class="btn btn-info" onclick="goBack()">Πίσω</button>
 
 </p>
 <script>
