--- a/machines/templates/machines/create.html
+++ b/machines/templates/machines/create.html
@@ -56,7 +56,7 @@
 
             <td>
                 {{ form.Σημειώσεις|as_crispy_field }}
-                <button type="button" class="btn btn-primary" onclick="goBack()">Πίσω</button>
+                <button type="button" class="btn btn-info" onclick="goBack()">Πίσω</button>
                 <button name="add_machine" type="submit" value="Αποθήκευση" class="btn btn-success">Αποθήκευση</button>
 
             </td>
