--- a/machines/templates/machines/detail.html
+++ b/machines/templates/machines/detail.html
@@ -39,7 +39,7 @@
 
 
                         <a>
-                            <a class="btn btn btn-info" role="button"  href="/customers/{{ field.Πελάτης.id }}">
+                            <a class="btn btn btn-primary" role="button"  href="/customers/{{ field.Πελάτης.id }}">
                                 {{  form.Πελάτης|as_crispy_field }}
                         </a>
 
@@ -63,7 +63,7 @@
 
             <td >
                 {{ form.Σημειώσεις|as_crispy_field }}
-                <button type="button" class="btn btn-primary" onclick="goBack()">Πίσω</button>
+                <button type="button" class="btn btn-info" onclick="goBack()">Πίσω</button>
                 <button type="submit" value="Αποθήκευση" class="btn btn-success">Αποθήκευση</button>
                 {% if not services  and not customer %}
 
