--- a/machines/templates/machines/search_machine_result.html
+++ b/machines/templates/machines/search_machine_result.html
@@ -40,7 +40,7 @@
         <td><a href="/machines/{{ obj.id }}">{{ obj.Serial}} </a></td>
         <td><a href="/machines/{{ obj.id }}">{{ obj.Εναρξη}} </a></td>
         <td><a href="/machines/{{ obj.id }}">{{ obj.Μετρητής_έναρξης}} </a></td>
-        <td><a class="btn btn-info" role="button" href="/customers/{{ obj.Πελάτης.id }}">{{ obj.Πελάτης}} </a></td>
+        <td><a class="btn btn-primary" role="button" href="/customers/{{ obj.Πελάτης.id }}">{{ obj.Πελάτης}} </a></td>
         <td>
             <ol>{% for service in obj.services_set.all %}
                 <li><a href="/services/{{ service.id }}">{{ service.Ημερομηνία }} {{ service.Σκοπός_Επίσκεψης }}</a></li>
@@ -122,7 +122,7 @@
 {% endif %}
 
 <p>
-    <button type="button" class="btn btn-primary" onclick="goBack()">Πίσω</button>
+    <button type="button" class="btn btn-info" onclick="goBack()">Πίσω</button>
 
 </p>
 <script>
