--- a/services/templates/services/create.html
+++ b/services/templates/services/create.html
@@ -63,7 +63,7 @@
 
             <td>
                 {{ form.Σημειώσεις|as_crispy_field }}
-                <button type="button" class="btn btn-primary" onclick="goBack()">Πίσω</button>
+                <button type="button" class="btn btn-info" onclick="goBack()">Πίσω</button>
                    <input type="file" name="file" multiple />
                 <button name="add_service" type="submit" value="Αποθήκευση" class="btn btn-success">Αποθήκευση</button>
 
