--- a/services/templates/services/create_service_from_machines.html
+++ b/services/templates/services/create_service_from_machines.html
@@ -41,7 +41,7 @@
                     {{ form.Ημερομηνία|as_crispy_field }}
                     </div>
                     <div class="form-group col-md-2 mb-0">
-                        <a class="btn btn btn-info btn-lg" role="button" href="/customers/{{ customer.id }}">
+                        <a class="btn btn btn-primary btn-lg" role="button" href="/customers/{{ customer.id }}">
                             <h5>Πελάτης</h5>
                             {{ customer }}
 
@@ -83,7 +83,7 @@
 
             <td rowspan="5">
                 {{ form.Σημειώσεις|as_crispy_field }}
-                <button type="button" class="btn btn-primary" onclick="goBack()">Πίσω</button>
+                <button type="button" class="btn btn-info" onclick="goBack()">Πίσω</button>
                 <input type="file" name="file" multiple />
                 <button name="add_service" type="submit" value="Αποθήκευση" class="btn btn-success">Αποθήκευση</button>
 
