--- a/services/templates/services/search_service_result.html
+++ b/services/templates/services/search_service_result.html
@@ -62,7 +62,7 @@
         <td><a role="button" class="btn btn btn-secondary btn-sm" href=" /machines/{{ obj.Copier_ID.id }}" name="id">{{ obj.Copier_ID}} </a></td>
         <td><a href=" {{ obj.id }}" name="id">{{ obj.ΔΤΕ}} </a></td>
         <td><a href=" {{ obj.id }}" name="id">{{ obj.Price}} </a> </td>
-        <td><a class="btn btn-info" role="button" href="/customers/{{ obj.Copier_ID.Πελάτης.id }}" name="id">{{ obj.Copier_ID.Πελάτης }}</a></td>
+        <td><a class="btn btn-primary" role="button" href="/customers/{{ obj.Copier_ID.Πελάτης.id }}" name="id">{{ obj.Copier_ID.Πελάτης }}</a></td>
 
 
 
@@ -138,7 +138,7 @@
 {% endif %}
 
 <p>
-    <button type="button" class="btn btn-primary" onclick="goBack()">Πίσω</button>
+    <button type="button" class="btn btn-info" onclick="goBack()">Πίσω</button>
 
 </p>
 <script>
