--- a/services/templates/services/services_detail.html
+++ b/services/templates/services/services_detail.html
@@ -76,7 +76,7 @@
         <td><a href=" {{ obj.id }}" name="id">{{ obj.ΔΤΕ}} </a></td>
         <td><a href=" {{ obj.id }}" name="id">{{ obj.Price}} </a></td>
 
-        <td><a class="btn btn-info" role="button" href="/customers/{{ obj.Copier_ID.Πελάτης.id }}" name="id">
+        <td><a class="btn btn-primary" role="button" href="/customers/{{ obj.Copier_ID.Πελάτης.id }}" name="id">
             {{ obj.Copier_ID.Πελάτης }} </a>
         </td>
 
@@ -147,7 +147,7 @@
 
 
 <p>
-    <button type="button" class="btn btn-primary" onclick="goBack()">Πίσω</button>
+    <button type="button" class="btn btn-info" onclick="goBack()">Πίσω</button>
 
 </p>
 <script>
