--- a/services/templates/services/services_detail.html
+++ b/services/templates/services/services_detail.html
@@ -14,26 +14,32 @@
 
 <div class="form-row">
 
-        <div class="form-group col-md-4 mb-0">
-    <form action="{% url 'services:search_service' %}" method="get">
 
-        <input name="q" placeholder="Αναζήτηση..." type="text" >
-        <button class="btn btn-outline-success my-2 my-sm-0" name="Αναζήτηση" value="Αναζήτηση" type="submit">Αναζήτηση</button>
 
-    </form>
-        </div>
 
-        <div class="form-group col-md-6 mb-0">
-        <form action="{% url 'services:search_services_dte' %}" method="get">
 
-            <input name="q" placeholder="Αναζήτηση ΔΤΕ..." type="text" >
+      <div class="form-group col-md-4 mb-0">
+        <form class="form-inline" action="{% url 'services:search_services_dte' %}" method="get">
+
+            <input class="form-control mr-sm-2" name="q" placeholder="Αναζήτηση ΔΤΕ..." type="text" >
             <button class="btn btn-outline-success my-2 my-sm-0" name="Αναζήτηση" value="Αναζήτηση" type="submit">Αναζήτηση ΔΤΕ</button>
 
         </form>
         </div>
 
-</div>
+        <div class="form-group col-md-6 mb-0">
+    <form class="form-inline" action="{% url 'services:search_service' %}" method="get">
 
+        <input  class="form-control mr-sm-2" name="q" placeholder="Αναζήτηση..." type="text" >
+        <button class="btn btn-outline-success my-2 my-sm-0" name="Αναζήτηση" value="Αναζήτηση" type="submit">Αναζήτηση</button>
+
+    </form>
+        </div>
+
+
+
+</div>
+<p></p>
 <table class="table table-hover table-bordered">
 
     <thead>
