--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -31,6 +31,8 @@
             <a class="dropdown-item" href="{% url 'Calendar:finished_jobs' %}"><h6>Ολοκληρωμένες εργασίες</h6></a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="{% url 'Calendar:calendar' %}"><h6>Ημερολόγιο</h6></a>
+            <a class="dropdown-item" href="{% url 'Calendar:finished_calendar' %}"><h6>Ημερολόγιο Ολοκλ. εργασιών</h6></a>
+
 
         </div>
     </li>
